# TableSet

./: .gitignore  BUILD_INSTRUCTIONS.md  CMakeLists.txt
RFIX/: Browser_ReplFix.grc  Selection_Test.html  Selection_Test_es.html  Selection_Test_ru.html
RFIX.win/: Browser_Repl.rc2
RINT/: Browser_Repl.grc
Src/: BrowserRepl.cpp  BrowserRepl.hpp  BuildHelper.cpp  BuildHelper.hpp  ColumnOrientHelper.cpp  ColumnOrientHelper.hpp  GDLHelper.cpp  GDLHelper.hpp  GroundHelper.cpp  GroundHelper.hpp  HelpPalette.cpp  HelpPalette.hpp  LandscapeHelper.cpp  LandscapeHelper.hpp  LayerHelper.cpp  LayerHelper.hpp  Main.cpp  MarkupHelper.cpp  MarkupHelper.hpp  MeshIntersectionHelper.cpp  ResourceIDs.hpp  RoadHelper.cpp  RoadHelper.hpp  RotateHelper.cpp  RotateHelper.hpp  SelectionHelper.cpp  SelectionHelper.hpp  ShellHelper.cpp  ShellHelper.hpp
ToArchicad/: SelectionTable_AC27.apx
ToArchicad/Debug/: Browser_Repl_Int.apx  Browser_Repl_Int.exp  Browser_Repl_Int.lib
ToArchicad/Release/: SelectionTable_AC27.exp
ToArchicad/versions/1/: Browser_Repl.apx
Translations/RU/: Selection_Test.html
